--- a/data/blog/code-sample.mdx
+++ b/data/blog/code-sample.mdx
@@ -4,6 +4,7 @@ date: '2016-03-08'
 tags: ['markdown', 'code', 'features']
 draft: false
 summary: Example of a markdown file with code blocks and syntax highlighting
+thumbnail: "https://cdn.devminu.com/uploads/img_0.jpg"
 ---
 
 A sample post with markdown.
